--- a/tests/test.html
+++ b/tests/test.html
@@ -12,6 +12,7 @@
     <div id="qunit-testrunner-toolbar"></div>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests"></ol>
+    <script type="text/javascript" src="./webrunner_testfiles.js"></script>
     <script type="text/javascript" src="./webrunner.js"></script>
   </body>
 </html>
