added host selection

--- a/tests_cordova/www/index.html
+++ b/tests_cordova/www/index.html
@@ -31,11 +31,15 @@
             <h1>Apache Cordova</h1>
             <div id="deviceready">
                 <p class="event listening">Connecting to Device</p>
-                <div class="receivedarea"><p class="event received">Device is Ready.</p><p><label for="testfile">Test</label><select id="testfile"><option value="">All</option></select></p><p><button type="button" onclick="app.test();">Run Tests</button></p></div>
+                <div class="receivedarea"><p class="event received">Device is Ready.</p><p><label for="host">CouchDB</label><input type="text" id="host"/></p<p><label for="testfile">Test</label><select id="testfile"><option value="">All</option></select></p><p><button type="button" onclick="app.test();">Run Tests</button></p></div>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript">
+            var testUtils = {};
+        </script>
         <script type="text/javascript" src="tests/webrunner_testfiles.js"></script>
+        <script type="text/javascript" src="tests/test.utils_host.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
